update(locale, custom-validation, custromEntryPoint)